files/css/styles.css
/* ... */
h4 {
	opacity: 0.4;
}

section {
	max-width: 640px;
}

section ul,
footer ul {
	list-style: none;
	padding: 0;
	margin: 0 0 20px 0;
}

.images {
	max-width: 1680px;
	padding: 80px 0 140px 0;
}

a.image:hover {
	opacity: 0.8;
}

.row {
	display: flex;
}

.column-100 {
	flex: 100%;
	padding-right: 15px;
	padding-bottom: 45px;
}

.column-60 {
	flex: 60%;
	max-width: 1040px;
	padding-right: 15px;
}

.column-40 {
	flex: 40%;
	max-width: 615px;
	padding-right: 15px;
}

p.caption {
	padding: 10px 40px 0 0;
	line-height: 1.4;
}
p.link {
	padding-bottom: 10px;
}

p.intro {
	font-size: 28px;
	line-height: 36px;
	padding-bottom: 10px;
}

p.break {
	padding-top: 20px;
}

blockquote {
	border-left: 1px solid #dddddd;
	padding: 0 20px 0 20px;
	margin: 0;
}

hr {
	margin: 40px 0 20px 0;
	border-top: 1px solid #dddddd;
}

.opacity {
	opacity: 0.4;
}

.hover {
	text-decoration: none;
}

.uppercase {
	text-transform: uppercase;
}

.quote {
	padding-top: 8px;
	display: inline-block;
}

.desktop {
	display: inline;
}

footer {
	padding: 60px 0 0 0;
}

/* ==|== media queries ======================================================
   EXAMPLE Media Query for Responsive Design.
   This example overrides the primary ('mobile first') styles
   Modify as content requires.
   ========================================================================== */
@media only screen and (max-width: 1680px) {
	.home header,
	.work header {
		max-width: 920px;
	}
	.home h1,
	.home h2 {
		font-size: 40px;
		line-height: 48px;
		padding-bottom: 40px;
	}
	.images {
		max-width: 1540px;
		padding-top: 60px;
		padding-bottom: 60px;
	}
	.column-60 {
		flex: 65%;
	}
	.column-40 {
		flex: 35%;
	}
}
@media only screen and (max-width: 1380px) {
	.anchor {
		float: right;
		margin-left: 8%;
	}
	.desktop {
		display: none;
	}
}
@media only screen and (max-width: 900px) {
	body {
		font-size: 0.8em;
	}
	.container {
		padding: 20px 20px;
	}
	nav ul li {
		font-size: 14px;
	}
	.anchor {
		display: none;
	}
	.URL {
		margin-right: 0%;
	}
	nav a {
		opacity: 1;
	}
	.home header {
		padding-top: 40px;
	}
	.work header {
		padding-top: 40px;
	}
	.home h1 {
		font-size: 28px;
		line-height: 34px;
		max-width: 900px;
		padding-bottom: 20px;
	}
	.home h2 {
		font-weight: 400;
		font-size: 16px;
		line-height: 22px;
		max-width: 900px;
		padding-bottom: 20px;
	}
	.home header .opacity {
		opacity: 1;
	}
	.home h1 a,
	.home h2 a {
		opacity: 1;
	}
	.home h2 a {
		opacity: 0.8;
		text-decoration: underline;
	}
	.work h1 {
		font-size: 32px;
		line-height: 40px;
		padding-bottom: 0px;
	}
	h2,
	h3 {
		font-size: 20px;
		line-height: 26px;
		padding: 10px 0 10px 0;
		max-width: 615px;
	}
	p.caption {
		padding: 10px 0 0 0;
	}
	.column-100 p.caption {
		padding-bottom: 0px;
	}
	p.employable {
		font-size: 14px;
		line-height: 22px;
	}
	p.intro {
		font-size: 18px;
		line-height: 24px;
	}
	.images {
		padding: 100px 0 60px 0;
	}
	.row {
		display: block;
		max-width: 615px;
	}
	.column-100 {
		flex: 100%;
		padding: 0;
	}
	.column-60 {
		flex: 100%;
		padding: 0;
	}
	.column-40 {
		flex: 100%;
		padding: 0;
	}
	.home .arrow {
		padding-top: 60px;
	}
	.desktop {
		display: none;
	}
	table {
		padding-top: 40px;
		padding-bottom: 40px;
	}
	td {
		padding-right: 40px;
	}
}

/* ==|== non-semantic helper classes ========================================
   Please define your styles before this section.
   ========================================================================== */

/* For image replacement */
.ir {
	display: block;
	border: 0;
	text-indent: -999em;
	overflow: hidden;
	background-color: transparent;
	background-repeat: no-repeat;
	text-align: left;
	direction: ltr;
	*line-height: 0;
}
.ir br {
	display: none;
}

/* Hide from both screenreaders and browsers */
.hidden {
	display: none !important;
	visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders */
.visuallyhidden {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard */
.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
	clip: auto;
	height: auto;
	margin: 0;
	overflow: visible;
	position: static;
	width: auto;
}

/* Hide visually and from screenreaders, but maintain layout */
.invisible {
	visibility: hidden;
}

/* Contain floats: h5bp.com/q */
.clearfix:before,
.clearfix:after {
	content: "";
	display: table;
}
.clearfix:after {
	clear: both;
}
.clearfix {
	*zoom: 1;
}

/* ==|== print styles =======================================================
   Print styles.
   Inlined to avoid required HTTP connection
   ========================================================================== */

@media print {
	* {
		background: transparent !important;
		color: black !important;
		box-shadow: none !important;
		text-shadow: none !important;
		filter: none !important;
		-ms-filter: none !important;
	} /* Black prints faster: h5bp.com/s */
	a,
	a:visited {
		text-decoration: underline;
	}
	a[href]:after {
		content: " (" attr(href) ")";
	}
	abbr[title]:after {
		content: " (" attr(title) ")";
	}
	.ir a:after,
	a[href^="javascript:"]:after,
	a[href^="#"]:after {
		content: "";
	} /* Don't show links for images, or javascript/internal links */
	pre,
	blockquote {
		border: 1px solid #999;
		page-break-inside: avoid;
	}
	thead {
		display: table-header-group;
	}
	tr,
	img {
		page-break-inside: avoid;
	}
	img {
		max-width: 100% !important;
	}
	@page {
		margin: 0.5cm;
	}
	p,
	h2,
	h3 {
		orphans: 3;
		widows: 3;
	}
	h2,
	h3 {
		page-break-after: avoid;
	}
}
/* ... */

